<resources>
    <string name="app_name">AulaAndroid</string>
    <string name="soma">+</string>
    <string name="sub">-</string>
    <string name="mult">x</string>
    <string name="div">/</string>
    <string name="fechar">Fechar</string>
    <string name="calculadora">Calculadora</string>
    <string name="conversor">Conversor</string>
    <string name="agenda">Agenda</string>
    <string name="nome">Nome</string>
    <string name="salvar">Salvar</string>
    <string name="telefone">Telefone</string>
    <string name="email">Email</string>

</resources>
