<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculadora"
        android:id="@+id/bt_calculadora"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/conversor"
        android:id="@+id/bt_conversor"
        android:layout_gravity="center_horizontal" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agenda"
        android:id="@+id/bt_agenda"
        android:layout_gravity="center_horizontal"
        />
</LinearLayout>